--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <provider
+            android:name="com.example.user.database.DatabaseProvider"
+            android:authorities="com.example.database.provider">
+        </provider>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
